--- a/Hotel Management/Aboutus.html
+++ b/Hotel Management/Aboutus.html
@@ -5,13 +5,13 @@
         </title>
         <link rel="stylesheet" href="aboutus.css">
         <link href="https://fonts.googleapis.com/css?family=Flamenco" rel="stylesheet"> 
-
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <header>
             <nav>
                 <div class="row">
-                    <img src="images/Logo.png" class="logo">
+                    <img src="images/2be1.png" class="logo">
                     <ul class="main-nav" id="check-class">
                         <li><a href="Main.html">Home</a></li>
                         <li><a href="Aboutus.html">About Us</a></li>
@@ -26,22 +26,13 @@
 
         <section class="heading">
             <video autoplay loop class="video-background" muted plays-inline>
-                <source src="images/video.mp4" type="video/mp4"> 
+                <source src="images/2be.mp4" type="video/mp4"> 
             </video>
 
             <div class="welcome-msg">
-                <h1> About Niwaas Hotels </h1>
+                <h1> About Apartment550 </h1>
                 <p>
-                    Niwaas Hotels, is an Indian hospitality chain of leased and franchised hotels, homes and living spaces. 
-                    Founded in 2020 by Vineet Kumar, Niwaas initially consisted mainly of budget hotels. The startup expanded 
-                    globally with thousands of hotels, vacation homes and millions of rooms in India, Malaysia, UAE, Nepal, China, 
-                    Brazil, Mexico, UK, Philippines, Japan, Saudi Arabia, Sri Lanka, Indonesia, Vietnam, the United States and more.
-                    
-Nestled beside an 18-hole golf course minutes from the slopes, Hotel Park City is consistently acclaimed among the best hotels 
-in Park City, Utah. Among our most recent accolades, our AAA Four Diamond resort has proudly been rated a “Top Ski Hotel” by Conde
- Nast Traveler, and our Ruth’s Chris Steak House is the #1 rated Ruth’s Chris Steak House in the western U.S. We’ve also been placed 
- in the Certificate of Excellence Hall of Fame by TripAdvisor and earned the Certificate of Excellence (TripAdvisor), a Platinum Choice 
- Award (Smart Meetings Magazine), recognition as a “Most Admired Company” (Utah Business Magazine) and more.
+                    Apartment550 is a highly regarded, classic hotel ideally situated in the serene environment of Lifecamp, Abuja, the federal capital territory of Nigeria. Our primary focus is on providing exceptional hospitality to all our guests. We offer a range of luxurious, well-furnished rooms catering to various classes, ensuring utmost comfort. Our establishment features a first-class restaurant and bar, an inviting swimming pool, and several relaxation spots, all designed to provide the highest level of comfort and satisfaction for our valued customers.
                 </p>
                 <a href="Form.html" class="btn btn-subscribe"> Book Room </a>
                 <a href="Main.html" class="btn btn-comment"> Return to Home</a>
