--- a/Hotel Management/Form.html
+++ b/Hotel Management/Form.html
@@ -18,7 +18,7 @@
 	<header>
 		<nav>
 			<div class="row">
-				<img src="images/Logo.png" class="logo">
+				<img src="images/2be1.png" class="logo">
 				<ul class="main-nav" id="check-class">
 					<li><a href="Main.html">Home</a></li>
 					<li><a href="Aboutus.html">About Us</a></li>
