--- a/Hotel Management/attraction.html
+++ b/Hotel Management/attraction.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width = device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compaitable" content="ie=edge">
-	<title>Marriage</title>
+	<title>Apartment550</title>
 	<link rel="stylesheet" type="text/css" href="attr.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="row">
-                <img src="images/Logo.png" class="logo">
+                <img src="images/2be1.png" class="logo">
                 <ul class="main-nav" id="check-class">
                     <li><a href="Main.html">Home</a></li>
                     <li><a href="Aboutus.html">About Us</a></li>
@@ -26,82 +26,59 @@
 	<div class="pimg1">
 		<div class="ptext">
 			<span class="border">
-				Reason to Visit goa
+				Compelling Motives to Explore Apartment550 
 			</span>
 		</div>
 	</div>
 	<section class="section section-light">
-	<h2>Beaches</h2>
+	<h2>Lavish rooms, fine dining, security.</h2>
 	<p>
-        Nicknamed the "sunshine state" for its year-round warm weather, Goa is 
-        home to India's top beaches, fringed by palms and stretching for miles
-        along the Arabian Sea. Each beach has its own vibe, from backpacker hangouts
-        to wellness-focused yoga retreats.
-        If you're looking for an upbeat scene, beaches like Anjuna, Baga, and Calangute offer
-        water sports like surfing and parasailing, as well as live music on the sands after sunset.
-        You can unwind or keep the party going at beach shacks, where bars serve ice-cold beer and
-        restaurants dish up seafood like prawn tempura and tuna tartare.
+        Apartment550 Hotel offers opulent rooms, exquisite dining, and top-notch security, all meticulously designed to provide unparalleled hospitality to our esteemed guests. Our proficient staff is dedicated to delivering exceptional service, ensuring a remarkable customer experience. Your stay with us guarantees the epitome of earthly hospitality.
 	</p>
 </section>
 <div class="pimg2">
 		<div class="ptext">
 			<span class="border trans">
-				Beaches
+				Tranquil Ambiance
 			</span>
 		</div>
 	</div>
 
 	<section class="section section-dark">
-	<h2>Goan cuisine</h2>
+	<h2>Elegant Dining and Sophisticated Bar</h2>
 	<p>
-        Goa's famed cuisine leans heavily on seafood like prawns, mackerel, and tuna, 
-        and frequently combines rich ingredients like coconut with tangy ones such as 
-        tamarind and the local kokum fruit. Spices like turmeric and cumin add deep flavors.
-        Local favorites like caldo verde, a creamy potato and spinach soup, reflect 4 centuries of
-        Portuguese rule. Another Indo-Portuguese specialty is bebinca, a layer cake made with ghee
-        and coconut. There's also a large Catholic community here, which uses ingredients like pork 
-        and beef (roasted or in curries) that are rare in the rest of India. 
-	</p>
+        Our refined dining and upscale bar offer a delightful selection of fresh and flavorful delicacies, accompanied by a diverse range of modern beverages. Experience enhanced nourishment and joyful moments in a serene setting, all at competitive prices.
 </section>
 
 <div class="pimg3">
 		<div class="ptext">
 			<span class="border trans">
-				Goan Cuisine
+				Exquisite Culinary Delights
 			</span>
 		</div>
 	</div>
 
 	<section class="section section-light">
-	<h2>Night Life</h2>
+	<h2>Vibrant Nighttime Experience</h2>
 	<p>
-        Goa's buzzing nightlife is a throwback to the 1960s, when beaches like Anjuna became
-        famous for their full-moon raves. The scene is more organized these days, but crowds 
-        still hang out at trendy beach shacks where DJs spin house and trance till sunrise.
-        North Goa is the main party zone, with a string of lively clubs and bars overlooking Baga and 
-        Calangute beaches. For a more laid-back vibe, you'll find old-school taverns both beachside
-        and in the state capital Panaji, where you can sip feni, a strong local liquor distilled from cashew nuts.
+        Apartment550 offers an unparalleled nightlife adventure, featuring electrifying full-moon raves. Our meticulously curated scene boasts trendy surroundings where guests revel in the pulsating beats spun by DJs, extending till sunrise.
+
+        Within our premises, a dedicated party zone houses an array of vibrant clubs and bars. For those seeking a more relaxed atmosphere, traditional taverns provide a nostalgic ambience, perfect for savoring local delights like feni, a potent liquor crafted from cashew nuts, and more.
 	</p>
 </section>
 
 <div class="pimg4">
     <div class="ptext">
         <span class="border trans">
-            Night Life
+            Vibrant Nighttime Experience
         </span>
     </div>
 </div>
 
 <section class="section section-dark">
-<h2>Museum and Galleries</h2>
+<h2>Thrilling Adventure Sports</h2>
 <p>
-    Museums and galleries reflect Goa's "East meets West" culture, with exhibits ranging from
-    Portuguese glazed tiles to Hindu paintings. Many contemporary artists favor Indian over 
-    colonial styles in their works, which are often displayed at the Museum of Goa.
-    Quirkier exhibits include local hero Mario Miranda's affectionate cartoon sketches of
-    Goan life, on show at the Mario Gallery. It's just opposite the boat-shaped Houses of Goa, 
-    where exhibits like terracotta tiles and china mosaics shine a light on the development of 
-    Goan architecture and design.
+    We offer exhilarating adventure sports both within and outside the hotel premises. These facilities are designed to infuse excitement into your stay and provide you with the means to engage in invigorating physical activities.
 </p>
 </section>
 
@@ -109,21 +86,19 @@
 <div class="pimg5">
     <div class="ptext">
         <span class="border trans">
-           Galleries
+            Captivating Galleries of Excitement
         </span>
     </div>
 </div>
 
 <section class="section section-light">
-<h2>Adventure Sports</h2>
+<h2>WanderPassage Travels and Tours.</h2>
 <p>
-    With its coastline, rivers, and inland forests, Goa is a hot spot for adventure sports
-    ranging from waterfall trekking to all-terrain biking. Lots of activities are aimed at 
-    backpackers, while options like parasailing and ballooning are also popular with families.
-    Windsurfers and kitesurfers can catch stiff breezes at beaches like Morjim and Arambol, with 
-    lighter winds at Dona Paula Beach ideal for beginners. Groups of friends can skim the waves on 
-    banana boat rides, or down the Mandovi River on a whitewater rafting trip. For adrenaline junkies, 
-    there's a bungee jump platform at Mayem Lake.
+    Wanderpassage Travels and Tours, conveniently based at Apartment550, is dedicated to fulfilling your travel needs. Our services span diverse areas, including comprehensive preparations for overseas education in countries like the USA, Canada, Australia, New Zealand, various European destinations including Germany and France, as well as all Schengen countries.
+
+    We proficiently manage hotel reservations, international holiday packages, and pilgrimage journeys.
+
+    We facilitate both international and domestic air ticketing, offering access to destinations worldwide and across Nigeria.
 </p>
 </section>
 
@@ -131,7 +106,7 @@
 <div class="pimg6">
 		<div class="ptext">
 			<span class="border trans">
-				Adventure Sports
+				<b>WanderPassage Travels and Tours</b>
 			</span>
 		</div>
 	</div>
